# rsl_pdvdv4_Git2026

./: README.md
local_scripts/block_compare_result/: readme.txt
local_scripts/block_compare_result/analysis_scripts/: command.sh  compare_fit.cxx  energyD_combine.cxx  hist_combine.cxx  rsl_compare.cxx  rsl_compare_m2.cxx  rsl_compare_p2.cxx  slice_fit.cxx  slice_fit_m2.cxx  slice_fit_p2.cxx
local_scripts/radio_bkg_effect/: print_OpChannel.C
local_scripts/radio_bkg_effect/analysis_scripts/: command.sh  compare_fit.cxx  hist_combine.cxx  rsl_compare.cxx  rsl_compare_m1.cxx  rsl_compare_m2.cxx  rsl_compare_p2.cxx  slice_fit.cxx  slice_fit_m1.cxx  slice_fit_m2.cxx  slice_fit_p1.cxx  slice_fit_p2.cxx
local_scripts/radio_bkg_effect/results/: OpChannel_DetectedPhotons.root
local_scripts/rsl_compare_result/analysis_scripts/: command.sh  (+9 more)
local_scripts/test/: test_dump.txt
local_scripts/test_block_yield/: sim_CRT_rsl50_abs10.fcl
server_scripts/buffer_length/: .module0_sim_CRT.fcl.swp  MuonEnergy_v2_BACKUP.root  buffer_10cm_down.fcl  buffer_10cm_right.fcl  buffer_10cm_up.fcl  buffer_110cm_down.fcl  buffer_110cm_right.fcl  buffer_110cm_up.fcl  buffer_130cm_down.fcl  buffer_130cm_right.fcl  buffer_130cm_up.fcl  buffer_150cm_down.fcl  buffer_150cm_right.fcl  buffer_150cm_up.fcl  buffer_30cm_down.fcl  buffer_30cm_right.fcl  buffer_30cm_up.fcl  buffer_50cm_down.fcl  buffer_50cm_right.fcl  buffer_50cm_up.fcl  buffer_70cm_down.fcl  buffer_70cm_right.fcl  buffer_70cm_up.fcl  buffer_90cm_down.fcl  buffer_90cm_right.fcl  buffer_90cm_up.fcl  buffer_NewCorsika.fcl  buffer_initial.fcl
server_scripts/source_code_vd/: CMakeLists.txt  CRTGenPdvd_module.cc  CRTTrajectoryCut_module.cc
(+369 files in other folders)
